# ChangeLog for squash_dir

*squash_dir-13.12
	Martin Väth <martin at mvath.de>:
	- Update docs to use /etc/portage/make.conf instead of /etc/make.conf

*squash_dir-13.11
	Martin Väth <martin at mvath.de>:
	- Treat 0 and - as false only if no symbol follows

*squash_dir-13.10
	Martin Väth <martin at mvath.de>:
	- Fix completion for >=zsh-5.3

*squash_dir-13.9
	Martin Väth <martin at mvath.de>:
	- Fix getopts usage

*squash_dir-13.8
	Martin Väth <martin at mvath.de>:
	- Remove redundant sh quoting

*squash_dir-13.7
	Martin Väth <martin at mvath.de>:
	- Declare project as unmaintained

*squash_dir-13.6
	Martin Väth <martin at mvath.de>:
	- Update emerge.sh to current portageq

*squash_dir-13.4
*squash_dir-13.5
	Martin Väth <martin at mvath.de>:
	- Improve check for running openrc
	- Fix shebangs
	- Support new git
	- Update tagging mechanism in release.sh

*squash_dir-13.3
	Martin Väth <martin at mvath.de>:
	- Recommend to use alias squash_dir='noglob squash_dir'

*squash_dir-13.2
	Martin Väth <martin at mvath.de>:
	- Move openrc-wrapper from /usr/sbin to /usr/bin
	- Make openrc-wrapper installation optional.

*squash_dir-13.1a
	Martin Väth <martin at mvath.de>:
	- Declare squashmount as the official successor of this project

*squash_dir-13.1
	Martin Väth <martin at mvath.de>:
	- Fix IGNORETOUCH with subdirectories and document example

*squash_dir-13.0
	Martin Väth <martin at mvath.de>:
	- Add optional support for systemd

*squash_dir-12.10
	Martin Väth <martin at mvath.de>:
	- Let --with{,-first}-order patch conf.d/squash_dir correctly
	- Yet another change of default ORDER: overlayfs is first, as it
	  finally seems to be included into linux-3.11
	- Improve contrib files

*squash_dir-12.9
	Martin Väth <martin at mvath.de>:
	- Fix zsh completion: Treat context properly

*squash_dir-12.8
	Martin Väth <martin at mvath.de>:
	- Fix mksquashfs argument order for first call. Thanks to Massimo B.
	- Add RESTART option

*squash_dir-12.7
	Martin Väth <martin at mvath.de>: